# learn-rendy

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  builddx12.bat  buildvk.bat  clippy.bat  rundx12.bat  runvk.bat
book/: book.toml
book/src/: 01_introduction.md  02_triangle.md  SUMMARY.md
examples/: instanced_cube.rs  triangle.rs
examples/shaders/instanced_cube/: cube.frag  cube.vert
